--- a/ZoneSystemAssistant/Views/ItemsPage.xaml
+++ b/ZoneSystemAssistant/Views/ItemsPage.xaml
@@ -18,161 +18,105 @@
             <Setter Property="VerticalTextAlignment" Value="Center"></Setter>
         </Style>
     </ContentPage.Resources>
-    
+
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Clicked="AddItem_Clicked" />
+        <ToolbarItem Text="Reset" Clicked="Reset_Clicked" />
     </ContentPage.ToolbarItems>
 
-    <Grid ColumnSpacing="0">
+    <Grid RowSpacing="0" ColumnSpacing="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
+            <RowDefinition Height="64" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Grid.Row="0" ColumnSpacing="0" RowSpacing="0">
+        
+        <Grid Grid.Column="0" Grid.Row="0" ColumnSpacing="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <FlexLayout Direction="Row" Grid.Row="0" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#000000" TextColor="#ffffff">0</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="1" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#191919" TextColor="#e6e6e6">I</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="2" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#323232" TextColor="#cccccc">II</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="3" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#4c4c4c" TextColor="#b2b2b2">III</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="4" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#656565" TextColor="#989898">IV</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="5" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#7f7f7f" TextColor="Black">V</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="6" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#989898" TextColor="#656565">VI</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="7" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#b2b2b2" TextColor="#4c4c4c">VII</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="8" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#cccccc" TextColor="#323232">VIII</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="9" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#e6e6e6" TextColor="#191919">IX</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
-            <FlexLayout Direction="Row" Grid.Row="10" Grid.Column="0">
-                <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#ffffff" TextColor="#000000">X</Label>
-                <Image Source="rightarrow.png"></Image>
-            </FlexLayout>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="4*" />
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0" Grid.Row="0" ColumnSpacing="0" RowSpacing="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <FlexLayout Direction="Row" Grid.Row="0" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#000000" TextColor="#ffffff">0</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="1" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#191919" TextColor="#e6e6e6">I</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="2" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#323232" TextColor="#cccccc">II</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="3" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#4c4c4c" TextColor="#b2b2b2">III</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="4" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#656565" TextColor="#989898">IV</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="5" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#7f7f7f" TextColor="Black">V</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="6" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#989898" TextColor="#656565">VI</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="7" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#b2b2b2" TextColor="#4c4c4c">VII</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="8" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#cccccc" TextColor="#323232">VIII</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="9" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#e6e6e6" TextColor="#191919">IX</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+                <FlexLayout Direction="Row" Grid.Row="10" Grid.Column="0">
+                    <Label FlexLayout.Grow="1" Style="{StaticResource LabelStyle}" BackgroundColor="#ffffff" TextColor="#000000">X</Label>
+                    <Image Source="rightarrow.png"></Image>
+                </FlexLayout>
+            </Grid>
+            <RefreshView Grid.Row="0" Grid.Column="1" Padding="0" Margin="0" BackgroundColor="Blue" IsRefreshing="{Binding IsBusy, Mode=TwoWay}" Command="{Binding LoadItemsCommand}">
+                <CollectionView x:Name="ItemsCollectionView" ItemsSource="{Binding Items}" Margin="0">
+                    <d:CollectionView.ItemsSource>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String>First Item</x:String>
+                            <x:String>Second Item</x:String>
+                            <x:String>Third Item</x:String>
+                            <x:String>Fourth Item</x:String>
+                            <x:String>Fifth Item</x:String>
+                            <x:String>Sixth Item</x:String>
+                        </x:Array>
+                    </d:CollectionView.ItemsSource>
+                </CollectionView>
+            </RefreshView>
         </Grid>
-        <RefreshView Grid.Row="0" Grid.Column="1" Padding="0" Margin="0" BackgroundColor="Blue" IsRefreshing="{Binding IsBusy, Mode=TwoWay}" Command="{Binding LoadItemsCommand}">
-            <CollectionView x:Name="ItemsCollectionView" ItemsSource="{Binding Items}" Margin="0">
-                <d:CollectionView.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>First Item</x:String>
-                        <x:String>Second Item</x:String>
-                        <x:String>Third Item</x:String>
-                        <x:String>Fourth Item</x:String>
-                        <x:String>Fifth Item</x:String>
-                        <x:String>Sixth Item</x:String>
-                    </x:Array>
-                </d:CollectionView.ItemsSource>
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Padding="10,0,0,0" ColumnSpacing="0" Margin="0">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*" />
-                                <ColumnDefinition Width="5*" />
-                            </Grid.ColumnDefinitions>
-                            <Label Text="{Binding Text}" 
-                                   d:Text="{Binding .}"
-                                   Grid.Row="0"
-                                   Grid.Column="0"
-                                   LineBreakMode="NoWrap" 
-                                   Style="{DynamicResource ListItemTextStyle}" 
-                                   FontSize="32"
-                                   FontAttributes="Bold"
-                                   VerticalOptions="Center"
-                                   HorizontalTextAlignment="Start"/>
-                            <Label Text="{Binding Description}" 
-                                   d:Text="Item descripton"
-                                   Grid.Row="0"
-                                   Grid.Column="1"
-                                   LineBreakMode="NoWrap"
-                                   Style="{DynamicResource ListItemDetailTextStyle}"
-                                   FontSize="22" 
-                                   VerticalOptions="Center"
-                                   HorizontalTextAlignment="Start"/>
-                            <Grid.GestureRecognizers>
-                                <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
-                            </Grid.GestureRecognizers>
-                        </Grid>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </RefreshView>
-    </Grid>
 
-    <!--<RefreshView IsRefreshing="{Binding IsBusy, Mode=TwoWay}" Command="{Binding LoadItemsCommand}">
-        <CollectionView x:Name="ItemsCollectionView"
-                ItemsSource="{Binding Items}">
-            <d:CollectionView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>First Item</x:String>
-                    <x:String>Second Item</x:String>
-                    <x:String>Third Item</x:String>
-                    <x:String>Fourth Item</x:String>
-                    <x:String>Fifth Item</x:String>
-                    <x:String>Sixth Item</x:String>
-                </x:Array>
-            </d:CollectionView.ItemsSource>
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <StackLayout Padding="10">
-                        <Label Text="{Binding Text}" 
-                                d:Text="{Binding .}"
-                                LineBreakMode="NoWrap" 
-                                Style="{DynamicResource ListItemTextStyle}" 
-                                FontSize="16" />
-                        <Label Text="{Binding Description}" 
-                                d:Text="Item descripton"
-                                LineBreakMode="NoWrap"
-                                Style="{DynamicResource ListItemDetailTextStyle}"
-                                FontSize="13" />
-                        <StackLayout.GestureRecognizers>
-                            <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
-                        </StackLayout.GestureRecognizers>
-                    </StackLayout>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </RefreshView>--> 
+        <FlexLayout Grid.Column="0" Grid.Row="1" BackgroundColor="Black">
+            <Button Clicked="AddItem_Clicked" Text="Add" TextColor="White" BackgroundColor="DimGray" Margin="4"></Button>
+        </FlexLayout>
+    </Grid>
 </ContentPage>
