--- a/ZoneSystemAssistant/Views/ItemsPage.xaml
+++ b/ZoneSystemAssistant/Views/ItemsPage.xaml
@@ -125,7 +125,7 @@
                                 <Image Source="leftarrow.png"
                                     Grid.Row="0"
                                     Grid.Column="0"
-                                    
+                                    IsVisible="{Binding ShowEvReading}"
                                     Margin="0,0,6,0"
                                     />
                                 <Label Text="{Binding Item.Ev}" 
