--- a/ZoneSystemAssistant/Views/ItemsPage.xaml
+++ b/ZoneSystemAssistant/Views/ItemsPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
@@ -116,7 +116,7 @@
                     </d:CollectionView.ItemsSource>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid ColumnSpacing="0" Margin="0" HeightRequest="52">
+                            <Grid ColumnSpacing="0" Margin="0" HeightRequest="52" BackgroundColor="{Binding Color}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
