--- a/ZoneSystemAssistant/Views/ItemsPage.xaml
+++ b/ZoneSystemAssistant/Views/ItemsPage.xaml
@@ -17,6 +17,22 @@
             <Setter Property="TextColor" Value="White" />
             <Setter Property="VerticalTextAlignment" Value="Center" />
         </Style>
+        <Style TargetType="{x:Type Label}" x:Key="ValueOn">
+            <Setter Property="FontSize" Value="32" />
+            <Setter Property="TextColor" Value="White" />
+            <Setter Property="FontAttributes" Value="Bold" />
+        </Style>
+        <Style TargetType="{x:Type Label}" x:Key="ValueOff">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="TextColor" Value="DarkGray" />
+            <Setter Property="FontAttributes" Value="None" />
+        </Style>
+        <Style TargetType="{x:Type Label}" x:Key="DescOn">
+
+        </Style>
+        <Style TargetType="{x:Type Label}" x:Key="DescOff">
+
+        </Style>
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
@@ -99,8 +115,8 @@
                     <Image Source="rightarrow.png"></Image>
                 </FlexLayout>
             </Grid>
-            <RefreshView Grid.Row="0" Grid.Column="1" Padding="0" Margin="0" BackgroundColor="Blue" IsRefreshing="{Binding IsBusy, Mode=TwoWay}" Command="{Binding LoadItemsCommand}">
-                <CollectionView x:Name="ItemsCollectionView" ItemsSource="{Binding Items}" Margin="0" SelectionMode="Single">
+            <!--<RefreshView IsRefreshing="{Binding IsBusy, Mode=TwoWay}" Command="{Binding LoadItemsCommand}">-->
+                <CollectionView Grid.Row="0" Grid.Column="1" x:Name="ItemsCollectionView" ItemsSource="{Binding Items}" Margin="0" SelectionMode="Single">
                     <CollectionView.ItemsLayout>
                         <LinearItemsLayout Orientation="Vertical" SnapPointsType="Mandatory" SnapPointsAlignment="Start" />
                     </CollectionView.ItemsLayout>
@@ -116,13 +132,12 @@
                     </d:CollectionView.ItemsSource>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid ColumnSpacing="0" Margin="0" HeightRequest="52" BackgroundColor="{Binding Color}">
+                            <Grid ColumnSpacing="0" Margin="0" HeightRequest="52">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="43"/>
-                                    <ColumnDefinition Width="43" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
                                 <Image Source="leftarrow.png"
@@ -133,24 +148,14 @@
                                     />
                                 <Label Text="{Binding Item.Ev}" 
                                    d:Text="{Binding .}"
+                                   Padding="10,0,0,0"
+                                   BackgroundColor="{Binding Color}"
                                    Grid.Row="0"
                                    Grid.Column="1"
-                                   LineBreakMode="NoWrap" 
-                                   Style="{DynamicResource ListItemTextStyle}" 
-                                   FontSize="32"
-                                   FontAttributes="Bold"
+                                   Style="{Binding ValueStyle}"
                                    VerticalOptions="Center"
                                    HorizontalTextAlignment="Start"
                                    IsVisible="{Binding ShowEvReading}"/>
-                                <Label Text="{Binding Item.Description}" 
-                                   d:Text="Item descripton"
-                                   Grid.Row="0"
-                                   Grid.Column="2"
-                                   LineBreakMode="NoWrap"
-                                   Style="{DynamicResource ListItemDetailTextStyle}"
-                                   FontSize="22" 
-                                   VerticalOptions="Center"
-                                   HorizontalTextAlignment="Start"/>
                                 <Grid.GestureRecognizers>
                                     <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
                                 </Grid.GestureRecognizers>
@@ -158,7 +163,7 @@
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
-            </RefreshView>
+            <!--</RefreshView>-->
         </Grid>
 
         <FlexLayout Grid.Column="0" Grid.Row="1" BackgroundColor="Black">
